--- a/Transformacion - Funciones/Funciones.ipynb
+++ b/Transformacion - Funciones/Funciones.ipynb
@@ -14,10 +14,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#importamos las librerias \n",
     "import pandas as pd \n",
     "import numpy as np\n",
     "import ast\n",
+    "from fastapi import FastAPI\n",
+    "app = FastAPI()\n",
     "from collections import defaultdict\n",
     "import calendar\n",
     "import asyncio\n",
@@ -31,7 +32,7 @@
    "outputs": [],
    "source": [
     "#cargamos la data\n",
-    "data = pd.read_csv(\"definido_movies_dataset.csv\")"
+    "data = pd.read_csv(\"mi_movies_dataset.csv\")"
    ]
   },
   {
@@ -40,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.head()"
+    "data.head( )"
    ]
   },
   {
@@ -60,15 +61,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[\"production_countries\"].fillna(value=\"Sin Datos\", inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "data[\"production_countries\"] = data[\"production_countries\"].astype(str)"
    ]
   },
@@ -78,13 +70,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#desanidamos los elemnetos de pais\n",
+    "data[\"production_countries\"] = data[\"production_countries\"].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)\n",
+    "data.fillna(\"\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data[\"budget\"].replace(\"\", inplace=True)\n",
     "data[\"revenue\"].replace(\"\", inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,12 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "#convierto los valores de la columna las siguientes columnas en valores flotantes para poder realizar la duvision ya que estaban como objetos\n",
-    "def calcular_retor(row):\n",
+    "def calcular_retorno(row):\n",
     "    revenue = row['revenue']\n",
     "    budget = row['budget']\n",
     "    \n",
@@ -119,11 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['return'] = data.apply(calcular_retor, axis=1)"
+    "data['return'] = data.apply(calcular_retorno, axis=1)"
    ]
   },
   {
@@ -136,26 +139,6 @@
     "    '''Se ingresa el mes y la funcion retorna la cantidad de peliculas que se estrenaron \n",
     "        ese mes \n",
     "    ''' \n",
-    "#nos imprimira el ideoma que le indiquemos  \n",
-    "    espanol_ingles = {\n",
-    "     'enero': 'January',\n",
-    "     'febrero': 'February',\n",
-    "     'marzo': 'March',\n",
-    "     'abril': 'April',\n",
-    "     'mayo': 'May',\n",
-    "     'junio': 'June',\n",
-    "     'julio': 'July',\n",
-    "     'agosto': 'August',\n",
-    "     'septiembre': 'September',\n",
-    "     'octubre': 'October',\n",
-    "     'noviembre': 'November',\n",
-    "     'diciembre': 'December'}\n",
-    "   \n",
-    "    if mes.lower() in espanol_ingles:\n",
-    "        mes_medi = espanol_ingles[mes.lower()]\n",
-    "    elif mes.lower not in espanol_ingles:\n",
-    "        mes_medi = mes\n",
-    "        \n",
     "    #Convertimos a la columna de tipo datetime\n",
     "    data[\"release_date\"] = pd.to_datetime(data[\"release_date\"])\n",
     "    \n",
@@ -164,7 +147,7 @@
     "    data['año'] = data['release_date'].dt.year\n",
     "\n",
     "    #Filtramos por el mes proporcionado\n",
-    "    peliculas_mes = data[data['mes'].str.lower() == mes_medi.lower()]\n",
+    "    peliculas_mes = data[data['mes'].str.lower() == mes.lower()]\n",
     "    \n",
     "    #Cantidada de pelicula por mes \n",
     "    cantidad = len(peliculas_mes)\n",
@@ -178,13 +161,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = peliculas_mes(\"enero\")\n",
+    "x= peliculas_mes(\"October\")\n",
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,17 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'dia': 'Monday', 'cantidad': 3503}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = peliculas_dia(\"Monday\")\n",
     "print (x)"
@@ -231,20 +206,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def franquicia(franquicia: str):\n",
-    "    '''\n",
-    "    Se ingresa la franquicia, retornando la \n",
-    "    cantidad de peliculas, ganancia total y promedio\n",
-    "    '''\n",
-    "    # Filtro el DataFrame por la franquicia proporcionada\n",
-    "    franquicia_fil = data[data['belongs_to_collection'].notnull() & data['belongs_to_collection'].apply(lambda x: isinstance(x, str) and franquicia.lower() in x.lower())]\n",
+    "def franquicia(franquicia): \n",
+    "    '''Se ingresa la franquicia, retornando la cantidad de peliculas, ganancia total y \n",
+    "    promedio\n",
+    "    ''' \n",
+    "    # Filtrar el DataFrame por la franquicia proporcionada\n",
+    "    franquicia_data = data[data['belongs_to_collection'].notnull() & data['belongs_to_collection'].apply(lambda x: isinstance(x, str) and franquicia.lower() in x.lower())]\n",
     "\n",
-    "    cantidad = len(franquicia_fil)\n",
+    "    # Obtener la cantidad de películas en la franquicia\n",
+    "    cantidad = len(franquicia_data)\n",
     "\n",
-    "    ganancia_en_total = franquicia_fil['revenue'].sum()-franquicia_fil['budget'].sum()\n",
-    "    ganancia_en_promedio = ganancia_en_total/cantidad\n",
+    "    # Calcular la ganancia total y el promedio de la franquicia\n",
+    "    ganancia_total = franquicia_data['revenue'].sum()\n",
+    "    ganancia_promedio = franquicia_data['revenue'].mean()\n",
     "\n",
-    "    return {'franquicia': franquicia, 'cantidad': cantidad, 'ganancia_total': ganancia_en_total , 'ganancia_promedio': ganancia_en_promedio}"
+    "    \n",
+    "    return {'franquicia':franquicia, 'cantidad': cantidad, 'ganancia_total':ganancia_total, 'ganancia_promedio':ganancia_promedio}"
    ]
   },
   {
@@ -264,9 +241,7 @@
    "outputs": [],
    "source": [
     "def peliculas_pais(pais: str):\n",
-    "    '''\n",
-    "    Ingresas el pais, retornando la cantidad de peliculas producidas en el mismo\n",
-    "    '''\n",
+    "    \n",
     "    # Filtrar la data por el país proporcionado\n",
     "    pelicula_pais = data[data[\"production_countries\"].str.contains(pais, case=False, na=False)]\n",
     "\n",
@@ -298,29 +273,54 @@
     "    Ingresas la productora, retornando la ganancia total y \n",
     "    la cantidad de peliculas que produjeron\n",
     "    '''\n",
-    "    # Filtro por la productora proporcionada\n",
-    "    productora_fil = data[data['production_companies'].notnull() & data['production_companies'].str.contains(productora, case=False)]\n",
+    "    # Filtrar el DataFrame por la productora proporcionada\n",
+    "    productora_filtro = data[data['production_companies'].notnull() & data['production_companies'].apply(lambda x: any(p['name'].lower() == productora.lower() for p in ast.literal_eval(x)))]\n",
     "\n",
     "    # Obtener la ganancia total y la cantidad de películas producidas por la productora\n",
-    "    ganancia_en_total = productora_fil['revenue'].sum()-productora_fil['budget'].sum()\n",
-    "    cantidad = len(productora_fil)\n",
+    "    ganancia_total = productora_filtro['revenue'].sum()-productora_filtro['budget'].sum()\n",
+    "    cantidad = len(productora_filtro)\n",
     "\n",
-    "    return {'productora': productora, 'ganancia_total': ganancia_en_total, 'cantidad': cantidad}"
+    "    return {'productora': productora, 'ganancia_total': ganancia_total, 'cantidad': cantidad}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = productoras(\"Interscope Communications\")\n",
+    "def productoras1(productora:str):\n",
+    "    \n",
+    "    produ = data[[\"production_companies\", \"budget\", \"revenue\"]].dropna()\n",
+    "    produ[\"production_companies\"] = produ[\"production_companies\"].map(str.lower)\n",
+    "\n",
+    "    cantidad = produ.shape[0]\n",
+    "    ganacia_total = (produ[\"revenue\"]- produ[\"budget\"]).sum()\n",
+    "\n",
+    "    return {\"productora\": productora, \"ganancia total\": ganacia_total, \"cantidad\": cantidad}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'productora': 'Interscope Communications', 'ganancia total': 317515442702.0, 'cantidad': 45453}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = productoras1(\"Interscope Communications\")\n",
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,9 +342,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pelicula': 'Jumanji', 'inversion': 65000000.0, 'ganacia': 197797249.0, 'retorno': 4.0430346, 'anio': 1995}\n"
+     ]
+    }
+   ],
    "source": [
     "x = retorno(\"Jumanji\")\n",
     "print(x)"
